--- a/.github/actions/gcloud-gar-auth/action.yaml
+++ b/.github/actions/gcloud-gar-auth/action.yaml
@@ -1,10 +1,11 @@
 ---
 name: GCloud gar-auth
 description: Authenticating to gar
-author: fspiers
+author: ixxeL
 inputs:
   registry:
     required: true
+    description: registry to auth to
 outputs:
   IMG_DIGEST:
     description: Digest of the image associated with searched tag
@@ -16,22 +17,22 @@ outputs:
 runs:
   using: composite
   steps:
-  - id: gcloud-gar-auth
-    run: |
-      echo -e "${BLUE}[ STEP - GAR AUTH ] > GCloud GAR Authentication${BLANK}"
-      echo -e "${CYAN}[ INFO ] > gcloud version.${BLANK}"
-      gcloud --version
+    - id: gcloud-gar-auth
+      run: |
+        echo -e "${BLUE}[ STEP - GAR AUTH ] > GCloud GAR Authentication${BLANK}"
+        echo -e "${CYAN}[ INFO ] > gcloud version.${BLANK}"
+        gcloud --version
 
-      echo -e "${YELLOW}[ EXECUTING ] > Authenticating to GAR ${{ inputs.image-registry }}${BLANK}"
-      rm ~/.docker/config.json || true
-      gcloud auth configure-docker ${{ inputs.image-registry }} --quiet
+        echo -e "${YELLOW}[ EXECUTING ] > Authenticating to GAR ${{ inputs.image-registry }}${BLANK}"
+        rm ~/.docker/config.json || true
+        gcloud auth configure-docker ${{ inputs.image-registry }} --quiet
 
-    shell: bash
-    env:
-      RED: \033[1;31m
-      GREEN: \033[1;32m
-      YELLOW: \033[1;33m
-      BLUE: \033[1;34m
-      PURPLE: \033[1;35m
-      CYAN: \033[1;36m
-      BLANK: \033[0m
+      shell: bash
+      env:
+        RED: \033[1;31m
+        GREEN: \033[1;32m
+        YELLOW: \033[1;33m
+        BLUE: \033[1;34m
+        PURPLE: \033[1;35m
+        CYAN: \033[1;36m
+        BLANK: \033[0m
