--- a/.github/actions/grype/action.yaml
+++ b/.github/actions/grype/action.yaml
@@ -29,39 +29,39 @@ inputs:
   verbose:
     description: increase verbosity (-v = info, -vv = debug)
     required: false
-    default: ''
+    default: ""
 
 runs:
   using: composite
   steps:
-  - id: grype-scan
-    run: |
-      set +e
-      echo -e "${BLUE}[ STEP - VULNERABILITIES CHECK ] > Scanning ${{ inputs.image-ref }} for vulnerabilities.${BLANK}"
-      echo -e "${CYAN}[ INFO ] > Grype version.${BLANK}"
-      grype version | grep -i "^version"
-      echo -e "${YELLOW}[ EXECUTING ] > Updating Grype DB.${BLANK}"
-      grype db update
-      echo -e "${YELLOW}[ EXECUTING ] > Executing ${{ inputs.image-ref }} vuln scan.${BLANK}"
-      grype ${{ inputs.transport }}:${{ inputs.image-ref }} --fail-on ${{ inputs.fail-on }} \
-                                                            --output ${{ inputs.output }} \
-                                                            --scope ${{ inputs.scope }} \
-                                                            --template ${{ inputs.template }} \
-                                                            ${{ inputs.verbose }}
-      EXIT_CODE="${PIPESTATUS[0]}"
-      if [[ ${EXIT_CODE} -ne 0 ]]
-      then
-        echo -e "${RED}[ FAIL ] > Grype scan failed !${BLANK}"
-      else
-        echo -e "${GREEN}[ SUCCESS ] > Grype scan succeeded !${BLANK}"
-      fi
-      exit ${EXIT_CODE}
-    shell: bash
-    env:
-      RED: \033[1;31m
-      GREEN: \033[1;32m
-      YELLOW: \033[1;33m
-      BLUE: \033[1;34m
-      PURPLE: \033[1;35m
-      CYAN: \033[1;36m
-      BLANK: \033[0m
+    - id: grype-scan
+      run: |
+        set +e
+        echo -e "${BLUE}[ STEP - VULNERABILITIES CHECK ] > Scanning ${{ inputs.image-ref }} for vulnerabilities.${BLANK}"
+        echo -e "${CYAN}[ INFO ] > Grype version.${BLANK}"
+        grype version | grep -i "^version"
+        echo -e "${YELLOW}[ EXECUTING ] > Updating Grype DB.${BLANK}"
+        grype db update
+        echo -e "${YELLOW}[ EXECUTING ] > Executing ${{ inputs.image-ref }} vuln scan.${BLANK}"
+        grype ${{ inputs.transport }}:${{ inputs.image-ref }} --fail-on ${{ inputs.fail-on }} \
+                                                              --output ${{ inputs.output }} \
+                                                              --scope ${{ inputs.scope }} \
+                                                              --template ${{ inputs.template }} \
+                                                              ${{ inputs.verbose }}
+        EXIT_CODE="${PIPESTATUS[0]}"
+        if [[ ${EXIT_CODE} -ne 0 ]]
+        then
+          echo -e "${RED}[ FAIL ] > Grype scan failed !${BLANK}"
+        else
+          echo -e "${GREEN}[ SUCCESS ] > Grype scan succeeded !${BLANK}"
+        fi
+        exit ${EXIT_CODE}
+      shell: bash
+      env:
+        RED: \033[1;31m
+        GREEN: \033[1;32m
+        YELLOW: \033[1;33m
+        BLUE: \033[1;34m
+        PURPLE: \033[1;35m
+        CYAN: \033[1;36m
+        BLANK: \033[0m
