--- a/.github/workflows/__helm-build__.yaml
+++ b/.github/workflows/__helm-build__.yaml
@@ -26,12 +26,12 @@ on:
       auto-tag-repo:
         description: Tag or not the repository
         required: false
-        default: 'false'
+        default: "false"
         type: string
         # Update version
       auto-update-chart:
         required: false
-        default: 'false'
+        default: "false"
         type: string
       chart-increment:
         required: false
@@ -79,7 +79,7 @@ on:
         type: boolean
       checkov-gate:
         required: false
-        default: '0'
+        default: "0"
         type: string
       checkov-skip-path:
         required: false
@@ -205,7 +205,7 @@ jobs:
         id: git-clone
         uses: actions/checkout@v3
         with:
-          fetch-depth: '0'
+          fetch-depth: "0"
       - name: Helm linting
         id: helm-lint
         uses: ixxeL-actions/workflows/.github/actions/helm-lint@main
@@ -311,7 +311,7 @@ jobs:
         uses: ixxeL-actions/workflows/.github/actions/git-push@main
         with:
           git-token: ${{ secrets.PAT }}
-          git-msg: ':package: CI release of helm chart ${{ env.COMPONENT_NAME }} version ${{ steps.bump-version.outputs.VERSION }} from user ${GITHUB_ACTOR} [skip ci]'
+          git-msg: ":package: CI release of helm chart ${{ env.COMPONENT_NAME }} version ${{ steps.bump-version.outputs.VERSION }} from user ${GITHUB_ACTOR} [skip ci]"
           git-workdir: ${{ inputs.git-workdir }}
           git-staging-dir: ${{ inputs.workingdir }}
           push-option: ${{ inputs.push-option }}
