--- a/.github/workflows/__trunk-img-builder__.yaml
+++ b/.github/workflows/__trunk-img-builder__.yaml
@@ -81,7 +81,7 @@ on:
         type: boolean
       gate:
         required: false
-        default: '50'
+        default: "50"
         type: string
       # podman login
       podman-docker:
@@ -177,7 +177,7 @@ on:
       verbose:
         description: increase verbosity (-v = info, -vv = debug)
         required: false
-        default: ''
+        default: ""
         type: string
       # git tag
       git-workdir:
@@ -186,7 +186,7 @@ on:
         type: string
       tag-msg:
         required: false
-        default: 'ci'
+        default: "ci"
         type: string
       push-option:
         required: false
@@ -212,7 +212,7 @@ jobs:
         id: clone
         uses: actions/checkout@v3
         with:
-          fetch-depth: '0'
+          fetch-depth: "0"
           token: ${{ secrets.git-token }}
       - name: Git config
         id: git-config
@@ -225,7 +225,7 @@ jobs:
         with:
           git-workdir: ${{ inputs.workingdir }}
           pattern: '${{ inputs.component }}-v?[0-9]+\.[0-9]+\.[0-9]+'
-          starting-tag: '${{ inputs.component }}-v0.0.0'
+          starting-tag: "${{ inputs.component }}-v0.0.0"
           branch: ${{ inputs.release-target-branch }}
       - name: Detect bump
         id: detect-bump
@@ -233,7 +233,7 @@ jobs:
         with:
           release-regex: '\s*:package: CI release of docker image ${{ inputs.component }}.+'
           minor-regex: '^(feat/.+-\(${{ inputs.component }}\).*|feature/.+-\(${{ inputs.component }}\).*)$'
-          major-regex: '^(breaking/.+-\(${{ inputs.component }}\).*|feat!/.+-\(${{ inputs.component }}\).*|!feat/.+-\(${{ inputs.component }}\).*|feature!/.+-\(${{ inputs.component }}\).*|!feature/.+-\(${{ inputs.component }}\).*)$' 
+          major-regex: '^(breaking/.+-\(${{ inputs.component }}\).*|feat!/.+-\(${{ inputs.component }}\).*|!feat/.+-\(${{ inputs.component }}\).*|feature!/.+-\(${{ inputs.component }}\).*|!feature/.+-\(${{ inputs.component }}\).*)$'
           searching-deepness: 20
       - name: Bump version
         id: bump-version
@@ -298,7 +298,7 @@ jobs:
         uses: ixxeL-actions/workflows/.github/actions/git-push@main
         with:
           git-token: ${{ secrets.git-token }}
-          git-msg: ':package: CI release of docker image ${{ inputs.component }} version ${{ steps.bump-version.outputs.VERSION }} from user ${GITHUB_ACTOR} [skip ci]'
+          git-msg: ":package: CI release of docker image ${{ inputs.component }} version ${{ steps.bump-version.outputs.VERSION }} from user ${GITHUB_ACTOR} [skip ci]"
           git-workdir: ${{ inputs.git-workdir }}
           git-staging-dir: ${{ inputs.workingdir }}
           push-option: ${{ inputs.push-option }}
