--- a/.github/workflows/__update-PR__.yaml
+++ b/.github/workflows/__update-PR__.yaml
@@ -27,7 +27,7 @@ on:
       component-path-position:
         required: false
         default: 2
-        type: number        
+        type: number
 
 jobs:
   update-pr-title:
@@ -40,7 +40,7 @@ jobs:
       - name: Clone code
         uses: actions/checkout@v3
         with:
-          fetch-depth: '0'
+          fetch-depth: "0"
           token: ${{ secrets.git-token }}
       - name: Git config
         id: git-config
@@ -60,11 +60,10 @@ jobs:
         with:
           pattern: "*-[0-9]*.[0-9]*.[0-9]*"
           git-workdir: ${{ inputs.workingdir }}
-      - name: Update PR title 
+      - name: Update PR title
         id: update-pr-title
         uses: ixxeL-actions/workflows/.github/actions/gh-update-pr-title@main
         with:
-          pattern: '${{ github.event.pull_request.head.ref }}-(${{ steps.get-component-name.outputs.COMPONENT_NAME }})'
+          pattern: "${{ github.event.pull_request.head.ref }}-(${{ steps.get-component-name.outputs.COMPONENT_NAME }})"
         env:
           GH_TOKEN: ${{ github.token }}
-    
