--- a/old/helm-build-parallel.yaml
+++ b/old/helm-build-parallel.yaml
@@ -66,7 +66,7 @@ on:
         type: string
       gate:
         required: false
-        default: '0'
+        default: "0"
         type: string
       skip-path:
         required: false
